--- a/sections/index__social-gallery.liquid
+++ b/sections/index__social-gallery.liquid
@@ -1,5 +1,5 @@
-<section class="container padding-y-xl">
-
+<section class="section is-width-wide padding-bottom-xl bg-contrast-lower" style="background-color:#deddd8 !important ;">
+<div class="container section is-width-standard">
   <div class="one-whole column">
     <div class="heading-section__content
                 is-flex
@@ -61,12 +61,13 @@
   {% endif %}
 
   </div>
+  </div>
 </section>
 
 {% schema %}
 {
   "name": "Social Gallery v2",
-  "class": "section is-width-standard",
+  "class": "section is-width-wide",
   "settings": [
   {
     "type":      "header",
