--- a/assets/styles/components/card-v9.scss
+++ b/assets/styles/components/card-v9.scss
@@ -84,7 +84,7 @@ Descr: Container of information used as teaser for further content exploration
       // background: rgba(27, 53, 80, 0.5) !important;
       // background-blend-mode: multiply;
       background: $color-primary-lighter;
-      @include border();
+      // @include border();
       padding: 20px;
     }
   }
