--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -166,4 +166,11 @@
       {%- endif %}
     </div>
   </div>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('.yotpo-default-button').addClass('button button--primary');
+      console.log("✅ Added style to Yotpo buttons")
+    });
+  </script>
+
 </section>
