--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -16571,122 +16571,12 @@ $color-primary: hsl(41, 44%, 37%);
   max-height: 600px;
   object-fit: cover;
 }
-// --------------------------------
 
-// (START) Global editor code https://codyhouse.co/ds/globals/colors
-
-// --------------------------------
-
-// :root,
-// [data-theme="default"] {
-//   // main
-//   --color-primary-darker: hsl(41, 44%, 37%);
-//   --color-primary-dark: hsl(41, 44%, 47%);
-//   --color-primary: hsl(41, 44%, 57%);
-//   --color-primary-light: hsl(41, 44%, 67%);
-//   --color-primary-lighter: hsl(41, 44%, 77%);
-
-//   // color contrasts
-//   --color-bg: hsl(50, 13%, 91%);
-//   --color-contrast-lower: hsl(50, 8%, 86%);
-//   --color-contrast-low: hsl(48, 4%, 74%);
-//   --color-contrast-medium: hsl(40, 2%, 38%);
-//   --color-contrast-high: hsl(60, 2%, 11%);
-//   --color-contrast-higher: hsl(0, 0%, 0%);
-// }
-
-// body,
-// [data-theme="default"] {
-//   // font rendering
-//   -webkit-font-smoothing: antialiased;
-//   -moz-osx-font-smoothing: grayscale;
-// }
-
-// // --------------------------------
-
-// // (END) Global editor code
-
-// // --------------------------------
-
-// // --------------------------------
-
-// // Color
-
-// // --------------------------------
-
-// [class*="color-"] {
-//   --color-o: 1;
-// }
-
-// .color-inherit {
-//   color: inherit;
-// }
-// .color-bg {
-//   color: alpha(var(--color-bg), var(--color-o, 1));
-// }
-// .color-contrast-lower {
-//   color: alpha(var(--color-contrast-lower), var(--color-o, 1));
-// }
-// .color-contrast-low {
-//   color: alpha(var(--color-contrast-low), var(--color-o, 1));
-// }
-// .color-contrast-medium {
-//   color: alpha(var(--color-contrast-medium), var(--color-o, 1));
-// }
-// .color-contrast-high {
-//   color: alpha(var(--color-contrast-high), var(--color-o, 1));
-// }
-// .color-contrast-higher {
-//   color: alpha(var(--color-contrast-higher), var(--color-o, 1));
-// }
-// .color-primary-darker {
-//   color: alpha(var(--color-primary-darker), var(--color-o, 1));
-// }
-// .color-primary-dark {
-//   color: alpha(var(--color-primary-dark), var(--color-o, 1));
-// }
-// .color-primary {
-//   color: alpha(var(--color-primary), var(--color-o, 1));
-// }
-// .color-primary-light {
-//   color: alpha(var(--color-primary-light), var(--color-o, 1));
-// }
-// .color-primary-lighter {
-//   color: alpha(var(--color-primary-lighter), var(--color-o, 1));
-// }
-
-// @supports (--css: variables) {
-//   .color-opacity-0 {
-//     --color-o: 0;
-//   }
-//   .color-opacity-10\% {
-//     --color-o: 0.1;
-//   }
-//   .color-opacity-20\% {
-//     --color-o: 0.2;
-//   }
-//   .color-opacity-30\% {
-//     --color-o: 0.3;
-//   }
-//   .color-opacity-40\% {
-//     --color-o: 0.4;
-//   }
-//   .color-opacity-50\% {
-//     --color-o: 0.5;
-//   }
-//   .color-opacity-60\% {
-//     --color-o: 0.6;
-//   }
-//   .color-opacity-70\% {
-//     --color-o: 0.7;
-//   }
-//   .color-opacity-80\% {
-//     --color-o: 0.8;
-//   }
-//   .color-opacity-90\% {
-//     --color-o: 0.9;
-//   }
-// }
+body {
+  // font rendering
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 // Product form options
 
@@ -16699,7 +16589,17 @@ $color-primary: hsl(41, 44%, 37%);
   }
 }
 
-// Apps
+/* # Apps
+================================================== */
+// Trusted site
 #trustedsite-tm-image {
   display: none !important;
+}
+
+// Yotpo
+.yotpo-default-button.yotpo-icon-btn.pull-right.yotpo-hidden-mobile.write-button.write-review-button,
+.yotpo-default-button.write-review-button.write-first-review-button {
+  max-width: 400px;
+  text-transform: capitalize;
+  background: $color-contrast-higher;
 }
