--- a/templates/collection.sub-collections.liquid
+++ b/templates/collection.sub-collections.liquid
@@ -33,7 +33,7 @@
     </div>
 
     {% comment %} Collection description {% endcomment %}
-    {% if collection.description != blank %}
+    {% if collection.description == blank %}
       <div class="container">
         <div class="one-whole column">
           <div class="collection__description content has-padding-bottom">
