Add quantity box + reorder product form

--- a/assets/styles/product/product-form.scss
+++ b/assets/styles/product/product-form.scss
@@ -163,7 +163,7 @@ button.shopify-payment-button__more-options {
 }
 
 .product-quantity-box.purchase-details__quantity {
-  margin-top: 12px;
+  //rm  margin-top: 12px;
 }
 
 .smart-payment-button--true {
