--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -28,6 +28,10 @@ $color-primary: hsl(41, 44%, 37%);
   z-index: 1;
 }
 
+.width-50 {
+  width: calc(50% - 12px);
+}
+
 .margin-y-md {
   margin-top: $half-gutter;
   margin-bottom: $half-gutter;
@@ -147,13 +151,15 @@ body {
 
 // Product form options
 
+.product-form-container .select select,
+input {
+  width: 100%;
+  font-weight: 600;
+  background: $color-white;
+  min-height: 60px;
+}
 .product-form-container .select {
   width: 100%;
-  select {
-    width: 100%;
-    font-weight: 600;
-    background: $color-white;
-  }
 }
 
 /* # Apps
@@ -169,4 +175,109 @@ body {
   max-width: 400px;
   text-transform: capitalize;
   background: $color-contrast-higher;
+}
+
+// --------------------------------
+
+// Flexbox
+
+// --------------------------------
+
+.flex {
+  display: flex;
+}
+.inline-flex {
+  display: inline-flex;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.flex-column {
+  flex-direction: column;
+}
+.flex-column-reverse {
+  flex-direction: column-reverse;
+}
+.flex-row {
+  flex-direction: row;
+}
+.flex-row-reverse {
+  flex-direction: row-reverse;
+}
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
+
+// flex items
+.flex-grow {
+  flex-grow: 1;
+}
+.flex-grow-0 {
+  flex-grow: 0;
+}
+.flex-shrink {
+  flex-shrink: 1;
+}
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+.flex-basis-0 {
+  flex-basis: 0;
+}
+
+.width-0 {
+  width: 0;
+}
+.width-10\% {
+  width: 10%;
+}
+.width-20\% {
+  width: 20%;
+}
+.width-25\% {
+  width: 25%;
+}
+.width-30\% {
+  width: 30%;
+}
+.width-33\% {
+  width: calc(100% / 3);
+}
+.width-40\% {
+  width: 40%;
+}
+.width-50\% {
+  width: 50%;
+}
+.width-60\% {
+  width: 60%;
+}
+.width-66\% {
+  width: calc(100% / 1.5);
+}
+.width-70\% {
+  width: 70%;
+}
+.width-75\% {
+  width: 75%;
+}
+.width-80\% {
+  width: 80%;
+}
+.width-90\% {
+  width: 90%;
+}
+.width-100\% {
+  width: 100%;
+}
+.width-100vw {
+  width: 100vw;
+}
+.width-auto {
+  width: auto;
+}
+
+.margin-right-sm {
+  margin-right: 12px;
 }
