--- a/snippets/product__form.liquid
+++ b/snippets/product__form.liquid
@@ -21,42 +21,50 @@
       >
   {% form 'product', product %}
 
-  {% if product.variants.size > 1 %}
-    {% if product.options.size > 1 %}
-      <div class="select-container">
-          {% if context == 'quickshop' %}
-            <div class="select">
-          {% endif %}
-          <select id="product-select-{{ product.id }}{{ product-form }}{{ object.id }}{{ block.id }}" name="id" class="multi_select" data-variant-selector>
-            {% for v in product.variants %}
-              <option {% if v == variant %}selected="selected"{% endif %} value="{{ v.id }}" data-image-id="{{ v.featured_media.id }}" data-sku="{{ v.sku }}">{{ v.title }}</option>
-            {% endfor %}
-          </select>
-          {% if context == 'quickshop' %}
-            </div>
-          {% endif %}
-      </div>
-    {% elsif product.options.size == 1 and product.variants.size > 1 or product.options.size == 1 and product.options[0] != "Title" %}
-      <div class="select-container">
-        <label class="label">{{ product.options[0] }}</label>
-        <div>
-          {% if context == 'quickshop' %}
-            <div class="select">
-          {% endif %}
-          <select id="product-select-{{ product.id }}{{ product-form }}{{ object.id }}{{ block.id }}" name="id" data-variant-selector>
-            {% for v in product.variants %}
-              <option {% if v == variant %}selected="selected"{% endif %} value="{{ v.id }}" data-image-id="{{ v.featured_media.id }}" data-sku="{{ v.sku }}">{{ v.title }}</option>
-            {% endfor %}
-          </select>
-          {% if context == 'quickshop' %}
-            </div>
-          {% endif %}
+  <div class="flex  is-justify-space-between">
+    {% if product.variants.size > 1 %}
+      {% if product.options.size > 1 %}
+        <div class="select-container width-75% margin-right-sm">
+            {% if context == 'quickshop' %}
+              <div class="select">
+            {% endif %}
+            <select id="product-select-{{ product.id }}{{ product-form }}{{ object.id }}{{ block.id }}" name="id" class="multi_select" data-variant-selector>
+              {% for v in product.variants %}
+                <option {% if v == variant %}selected="selected"{% endif %} value="{{ v.id }}" data-image-id="{{ v.featured_media.id }}" data-sku="{{ v.sku }}">{{ v.title }}</option>
+              {% endfor %}
+            </select>
+            {% if context == 'quickshop' %}
+              </div>
+            {% endif %}
         </div>
-      </div>
+      {% elsif product.options.size == 1 and product.variants.size > 1 or product.options.size == 1 and product.options[0] != "Title" %}
+        <div class="select-container width-75% margin-right-sm">
+          <!--rm <label class="label">{{ product.options[0] }}</label> -->
+          <div>
+            {% if context == 'quickshop' %}
+              <div class="select">
+            {% endif %}
+            <select id="product-select-{{ product.id }}{{ product-form }}{{ object.id }}{{ block.id }}" name="id" data-variant-selector>
+              {% for v in product.variants %}
+                <option {% if v == variant %}selected="selected"{% endif %} value="{{ v.id }}" data-image-id="{{ v.featured_media.id }}" data-sku="{{ v.sku }}">{{ v.title }}</option>
+              {% endfor %}
+            </select>
+            {% if context == 'quickshop' %}
+              </div>
+            {% endif %}
+          </div>
+        </div>
+      {% endif %}
+    {% else %}
+      <input type="hidden" name="id" value="{{ variant.id }}" />
     {% endif %}
-  {% else %}
-    <input type="hidden" name="id" value="{{ variant.id }}" />
-  {% endif %}
+
+    {% if settings.display_product_quantity %}
+    <div class="purchase-details__quantity product-quantity-box quantity-box--{{ settings.qty_box_style }} width-25%">
+      {% render 'quantity-box' %}
+    </div>
+    {% endif %}
+  </div>
 
   {% if product.variants.size > 1 %}
     {% if settings.product_form_style == "swatches" and product.variants.size > 1 or settings.product_form_style == "swatches" and product.options[0] != "Title" %}
@@ -90,11 +98,7 @@
     {% endif %}
 
     <div class="purchase-details {% if settings.display_product_quantity %}has-quantity-box{% endif %}">
-      {% if settings.display_product_quantity %}
-        <div class="purchase-details__quantity product-quantity-box quantity-box--{{ settings.qty_box_style }}">
-          {% render 'quantity-box' %}
-        </div>
-      {% endif %}
+
       {% comment %} Error message for add to cart action {% endcomment %}
       <div class="cart-warning"></div>
       <div class="purchase-details__buttons purchase-details__spb--{{ show_payment_button }}">
