--- a/assets/styles/sections/banner.scss
+++ b/assets/styles/sections/banner.scss
@@ -80,7 +80,7 @@
   font-family: {{ settings.banner_text__font.family }}, {{ settings.banner_text__font.fallback_families }};
   font-weight: {{ settings.banner_text__font.weight }};
   font-style: {{ settings.banner_text__font.style }};
-  font-size: {{ settings.banner_text_size }}px;
+  // font-size: {{ settings.banner_text_size }}px;
   letter-spacing: {{ settings.banner_text_letter_spacing }}px;
   color: {{ settings.banner_heading_color }};
 }
