--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -8731,7 +8731,8 @@ $input-border-color: {{ settings.border_color }};
 $input-border-radius: {{ settings.qty_border_radius }}px;
 
 $quantity-background-color: {{ settings.qty_background_color }} !default;
-$quantity-background-color-disabled: {{ settings.qty_background_color | color_modify: 'alpha', 0.5 }} !default;
+$quantity-background-color-disabled: {{ settings.qty_background_color }} !default;
+// $quantity-background-color-disabled: {{ settings.qty_background_color | color_modify: 'alpha', 0.5 }} !default;
 $quantity-background-hover-color: {{ settings.qty_background_hover_color }} !default;
 
 $quantity-box-stacked-control-width: 48px;
@@ -8756,7 +8757,8 @@ $quantity-box-control-width: 44px;
 .selector-wrapper {
   margin-bottom: 10px;
   @include flexbox();
-  @include align-items(center);
+  flex-direction: column;
+  @include align-items(start);
 
   &:last-of-type {
     margin-bottom: 1.5rem;
@@ -8786,9 +8788,11 @@ $quantity-box-control-width: 44px;
 
 // Quantity box
 .quantity-wrapper {
+  border: 3px solid $color-black;
 
   .quantity-element {
     min-height: $atc-button-height;
+    border: none !important;
   }
 
   .quantity-input {
@@ -9063,7 +9067,7 @@ button.shopify-payment-button__more-options {
 
 .product-quantity-box.purchase-details__quantity {
   margin-right: 10px;
-  width: calc(50% - 12px);
+  // width: calc(50% - 12px);
 
   @include respond-to('small-down') {
     width: 100%;
@@ -9128,7 +9132,7 @@ button.shopify-payment-button__more-options {
 
     @include respond-to('widescreen-up') {
       @include flex(1 0 calc(50% - 12px));
-      max-width: calc(50% - 12px);
+      //rm max-width: calc(50% - 12px);
     }
   }
   .action_button.action_button--secondary {
@@ -9144,7 +9148,7 @@ button.shopify-payment-button__more-options {
 
     @include respond-to('widescreen-up'){
       @include flex(1 0 calc(50% - 12px));
-      max-width: calc(50% - 12px);
+      //rm max-width: calc(50% - 12px);
       margin-right: 8px;
     }
 
@@ -9235,7 +9239,7 @@ button.shopify-payment-button__more-options {
 
   .purchase-details__spb--false {
     height: $atc-button-height;
-    margin: 12px 0 0;
+    margin: 24px 0 0;
     display: inline-block;
 
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
@@ -9253,7 +9257,7 @@ button.shopify-payment-button__more-options {
   }
 
   &.has-quantity-box .purchase-details__spb--false {
-    max-width: 50%;
+    //rm max-width: 50%;
 
     @include respond-to('medium-down') {
       max-width: 100%;
@@ -10162,6 +10166,13 @@ $product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0
 
 .product_section .product__information .thumbnail-sticker:nth-child(1n+4) {
   display: none;
+}
+
+// Narrow column
+.product__information {
+  @include respond-to('medium-up') {
+    padding-left:150px;
+  }
 }
 
 .has-product-sticker {
@@ -16600,9 +16611,15 @@ body {
 .product-form-container .select select,
 input {
   width: 100%;
-  font-weight: 600;
-  background: $color-white;
   min-height: 60px;
+  font-weight: 600;
+  background: transparent;
+  transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  &:hover,
+  &:active,
+  &:focus {
+    background: $color-white;
+  }
 }
 .product-form-container .select {
   width: 100%;
