--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -160,9 +160,15 @@ body {
 .product-form-container .select select,
 input {
   width: 100%;
-  font-weight: 600;
-  background: $color-white;
   min-height: 60px;
+  font-weight: 600;
+  background: transparent;
+  transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  &:hover,
+  &:active,
+  &:focus {
+    background: $color-white;
+  }
 }
 .product-form-container .select {
   width: 100%;
