--- a/assets/styles/product/product-thumbnail.scss
+++ b/assets/styles/product/product-thumbnail.scss
@@ -425,6 +425,13 @@ $product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0
   display: none;
 }
 
+// Narrow column
+.product__information {
+  @include respond-to('medium-up') {
+    padding-left:150px;
+  }
+}
+
 .has-product-sticker {
 
   .sticker-holder__content--product-center {
