--- a/templates/collection.sub-collections.liquid
+++ b/templates/collection.sub-collections.liquid
@@ -48,5 +48,8 @@
       {% section 'collection__sidebar' %}
       {% section 'collection-subcollection__main' %}
     </div>
+    <div class="container">
+      {% section 'collection__callout' %}
+    </div>
   </section>
 </div>
