--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -13149,8 +13149,8 @@ $banner-font-size: {{ settings.banner_text_size }}px;
 
   img,
   svg {
-    max-height: 300px !important;
-    object-fit: contain !important;
+    max-height: 200px !important;
+    object-fit: cover !important;
     transition: all 0.3s ease-in-out;
   }
 }
@@ -13187,7 +13187,7 @@ $banner-font-size: {{ settings.banner_text_size }}px;
   padding: 20px;
   @include flexbox();
   @include flex-direction(column);
-  @include align-items(center);
+  @include align-items(start);
 
   .title {
     text-align: center;
@@ -16489,6 +16489,17 @@ $color-primary: hsl(41, 44%, 37%);
   width: calc(50% - 12px);
 }
 
+.margin-bottom-xs {
+  margin-bottom: 8px !important;
+}
+
+.margin-bottom-sm {
+  margin-bottom: $half-gutter;
+}
+.margin-bottom-md {
+  margin-bottom: 24px;
+}
+
 .margin-y-md {
   margin-top: $half-gutter;
   margin-bottom: $half-gutter;
@@ -16599,6 +16610,15 @@ $color-primary: hsl(41, 44%, 37%);
   max-height: 200px;
   object-fit: contain;
 }
+
+/* Callout 
+============== */
+
+// .callout-img {
+//   position: absolute;
+//   top: 15px;
+//   right: 0;
+// }
 
 body {
   // font rendering
@@ -16743,4 +16763,422 @@ input {
 
 .margin-right-sm {
   margin-right: 12px;
+}
+
+/* Color
+================= */
+
+.bg {
+  background-color: $color-bg !important;
+}
+.bg-contrast-lower {
+  background-color: $color-contrast-lower !important;
+}
+.bg-contrast-low {
+  background-color: $color-contrast-low !important;
+}
+.bg-contrast-medium {
+  background-color: $color-contrast-medium !important;
+}
+.bg-contrast-high {
+  background-color: $color-contrast-high !important;
+}
+.bg-contrast-higher {
+  background-color: $color-contrast-higher !important;
+}
+.bg-primary-darker {
+  background-color: $color-primary-darker !important;
+}
+.bg-primary-dark {
+  background-color: $color-primary-dark !important;
+}
+.bg-primary {
+  background-color: $color-primary !important;
+}
+.bg-primary-light {
+  background-color: $color-primary-light !important;
+}
+.bg-primary-lighter {
+  background-color: #deceab !important;
+}
+.bg-accent-darker {
+  background-color: $color-accent-darker !important;
+}
+.bg-accent-dark {
+  background-color: $color-accent-dark !important;
+}
+.bg-accent {
+  background-color: $color-accent !important;
+}
+.bg-accent-light {
+  background-color: $color-accent-light !important;
+}
+.bg-accent-lighter {
+  background-color: $color-accent-lighter !important;
+}
+.bg-success-darker {
+  background-color: $color-success-darker !important;
+}
+.bg-success-dark {
+  background-color: $color-success-dark !important;
+}
+.bg-success {
+  background-color: $color-success !important;
+}
+.bg-success-light {
+  background-color: $color-success-light !important;
+}
+.bg-success-lighter {
+  background-color: $color-success-lighter !important;
+}
+.bg-warning-darker {
+  background-color: $color-warning-darker !important;
+}
+.bg-warning-dark {
+  background-color: $color-warning-dark !important;
+}
+.bg-warning {
+  background-color: $color-warning !important;
+}
+.bg-warning-light {
+  background-color: $color-warning-light !important;
+}
+.bg-warning-lighter {
+  background-color: $color-warning-lighter !important;
+}
+.bg-error-darker {
+  background-color: $color-error-darker !important;
+}
+.bg-error-dark {
+  background-color: $color-error-dark !important;
+}
+.bg-error {
+  background-color: $color-error !important;
+}
+.bg-error-light {
+  background-color: $color-error-light !important;
+}
+.bg-error-lighter {
+  background-color: $color-error-lighter !important;
+}
+.bg-white {
+  background-color: $color-white !important;
+}
+.bg-black {
+  background-color: $color-black !important;
+}
+
+// --------------------------------
+
+// Overflow
+
+// --------------------------------
+
+.overflow-hidden {
+  overflow: hidden;
+}
+.overflow-auto {
+  overflow: auto;
+}
+.momentum-scrolling {
+  -webkit-overflow-scrolling: touch;
+}
+
+// overscroll-behavior
+.overscroll-contain {
+  overscroll-behavior: contain;
+}
+
+/* -------------------------------- 
+
+File#: _1_scribble-text-decoration
+Title: Scribble Text Decoration
+Descr: A collection of animated scribble text decorations
+Usage: codyhouse.co/license
+
+-------------------------------- */
+
+.scribble-text-fx {
+  text-decoration: none;
+  position: relative;
+  z-index: 1;
+}
+
+.scribble-text-fx__label {
+  position: relative;
+  z-index: 2;
+}
+
+.scribble-text-fx__decoration {
+  position: absolute;
+  z-index: 1;
+  display: block;
+  pointer-events: none;
+  max-width: none;
+}
+
+// --v1
+.scribble-text-fx--v1 {
+  .scribble-text-fx__decoration {
+    top: -6px;
+    left: -12px;
+    width: calc(100% + 24px);
+    height: calc(100% + 12px);
+
+    > * {
+      stroke-width: 2px;
+
+      stroke-dashoffset: 367;
+      stroke-dasharray: 367;
+
+      transition: stroke-dashoffset 0.5s ease-in-out;
+    }
+  }
+
+  &:hover {
+    .scribble-text-fx__decoration > * {
+      stroke-dashoffset: 0;
+    }
+  }
+}
+
+// --v2
+.scribble-text-fx--v2 {
+  .scribble-text-fx__decoration {
+    bottom: 5px;
+    left: -5px;
+    width: calc(100% + 1px);
+    height: 8px;
+
+    > * {
+      stroke-width: 2px;
+
+      stroke-dashoffset: 155;
+      stroke-dasharray: 155;
+
+      transition: stroke-dashoffset 0.3s ease-in-out;
+    }
+  }
+
+  &:hover {
+    .scribble-text-fx__decoration > * {
+      stroke-dashoffset: 0;
+    }
+  }
+}
+
+// --v3
+.scribble-text-fx--v3 {
+  .scribble-text-fx__decoration {
+    top: 50%;
+    transform: translateY(-50%);
+    left: -15px;
+    width: calc(100% + 30px);
+    height: 8px;
+
+    > * {
+      stroke-width: 2px;
+      transition: stroke-dashoffset 0.2s ease-in-out;
+    }
+
+    > *:first-child {
+      stroke-dashoffset: 149;
+      stroke-dasharray: 149;
+    }
+
+    > *:last-child {
+      stroke-dashoffset: 147;
+      stroke-dasharray: 147;
+      transition-delay: 0.2s;
+    }
+  }
+
+  &:hover {
+    .scribble-text-fx__decoration > * {
+      stroke-dashoffset: 0;
+    }
+  }
+}
+
+// --v4
+.scribble-text-fx--v4 {
+  .scribble-text-fx__decoration {
+    top: 50%;
+    transform: translateY(-50%);
+    right: -46px; // make sure this value is higher than the width value 👇
+    width: 40px;
+    height: auto;
+
+    > * {
+      stroke-width: 2px;
+      transition: stroke-dashoffset 0.2s;
+    }
+
+    > *:first-child {
+      stroke-dashoffset: 33;
+      stroke-dasharray: 33;
+      transition-delay: 0.2s;
+    }
+
+    > *:last-child {
+      stroke-dashoffset: 28;
+      stroke-dasharray: 28;
+      transition-delay: 0s;
+    }
+  }
+
+  &:hover {
+    .scribble-text-fx__decoration {
+      > * {
+        stroke-dashoffset: 0;
+      }
+
+      > *:first-child {
+        transition-delay: 0s;
+      }
+
+      > *:last-child {
+        transition-delay: 0.2s;
+      }
+    }
+  }
+}
+
+// --v5
+.scribble-text-fx--v5 {
+  .scribble-text-fx__decoration {
+    top: 0;
+    right: 0;
+    width: 22px;
+    height: auto;
+    transform: translate(50%, -50%);
+
+    > * {
+      stroke-width: 2px;
+
+      stroke-dashoffset: 16;
+      stroke-dasharray: 16;
+
+      transition: stroke-dashoffset 0.3s;
+    }
+  }
+
+  &:hover {
+    .scribble-text-fx__decoration > * {
+      stroke-dashoffset: 0;
+    }
+  }
+}
+
+// --v6
+.scribble-text-fx--v6 {
+  .scribble-text-fx__decoration {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 65px;
+    height: auto;
+
+    > * {
+      stroke-width: 2px;
+      transition: stroke-dashoffset 0.2s ease-in-out;
+    }
+
+    > *:first-child {
+      stroke-dashoffset: 79;
+      stroke-dasharray: 79;
+      transition-delay: 0.2s;
+    }
+
+    > *:last-child {
+      stroke-dashoffset: 73;
+      stroke-dasharray: 73;
+      transition-delay: 0s;
+    }
+  }
+
+  &:hover {
+    .scribble-text-fx__decoration {
+      > * {
+        stroke-dashoffset: 0;
+      }
+
+      > *:first-child {
+        transition-delay: 0s;
+      }
+
+      > *:last-child {
+        transition-delay: 0.2s;
+      }
+    }
+  }
+}
+
+// --v7
+.scribble-text-fx--v7 {
+  .scribble-text-fx__decoration {
+    bottom: -5px;
+    left: -10px;
+    width: calc(100% + 20px);
+    height: 10px;
+
+    > * {
+      stroke-width: 2px;
+
+      stroke-dashoffset: 160;
+      stroke-dasharray: 160;
+
+      transition: stroke-dashoffset 0.4s ease-in-out;
+    }
+  }
+
+  &:hover {
+    .scribble-text-fx__decoration > * {
+      stroke-dashoffset: 0;
+    }
+  }
+}
+
+// --v8
+.scribble-text-fx--v8 {
+  .scribble-text-fx__decoration {
+    top: 50%;
+    transform: translateY(-50%);
+    right: -34px; // make sure this value is higher than the width value 👇
+    width: 29px;
+    height: auto;
+
+    > * {
+      stroke-width: 2px;
+      transition: stroke-dashoffset 0.2s;
+    }
+
+    > *:first-child {
+      stroke-dashoffset: 79;
+      stroke-dasharray: 79;
+      transition-delay: 0.2s;
+    }
+
+    > *:last-child {
+      stroke-dashoffset: 18;
+      stroke-dasharray: 18;
+      transition-delay: 0s;
+    }
+  }
+
+  &:hover {
+    .scribble-text-fx__decoration {
+      > * {
+        stroke-dashoffset: 0;
+      }
+
+      > *:first-child {
+        transition-delay: 0s;
+      }
+
+      > *:last-child {
+        transition-delay: 0.2s;
+      }
+    }
+  }
 }
