--- a/assets/styles/sections/list-collections.scss
+++ b/assets/styles/sections/list-collections.scss
@@ -36,8 +36,8 @@
 
   img,
   svg {
-    max-height: 300px !important;
-    object-fit: contain !important;
+    max-height: 200px !important;
+    object-fit: cover !important;
     transition: all 0.3s ease-in-out;
   }
 }
@@ -74,7 +74,7 @@
   padding: 20px;
   @include flexbox();
   @include flex-direction(column);
-  @include align-items(center);
+  @include align-items(start);
 
   .title {
     text-align: center;
