--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -13198,19 +13198,18 @@ $banner-font-size: {{ settings.banner_text_size }}px;
 ================================================== */
 
 .logo-list {
-
   .has-background {
-    padding-top: 20px;
+    padding-top: 60px;
   }
 
-
   .logo-list__wrapper {
-    @include respond-to('small-down') {
+    @include respond-to("small-down") {
       max-width: $site-max-width;
       width: $site-width;
     }
   }
 }
+
 /* # Map
 ================================================== */
 
