--- a/assets/styles/sections/logo-list.scss
+++ b/assets/styles/sections/logo-list.scss
@@ -2,14 +2,12 @@
 ================================================== */
 
 .logo-list {
-
   .has-background {
-    padding-top: 20px;
+    padding-top: 60px;
   }
 
-
   .logo-list__wrapper {
-    @include respond-to('small-down') {
+    @include respond-to("small-down") {
       max-width: $site-max-width;
       width: $site-width;
     }
