--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -1676,6 +1676,7 @@ h1,
 h2,
 .h2 {
   @include headline-style(floor($headline-font-size*0.9));
+  font-size: 30px !important
 }
 
 h3,
@@ -13747,7 +13748,7 @@ $banner-font-size: {{ settings.banner_text_size }}px;
     margin-bottom: 10px;
     font-size: $drop-down-menu-heading-font-size;
     line-height: 1.2;
-    font-weight: 500;
+    font-weight: 600;
   }
 
   .mega-menu__linklist-link {
