--- a/templates/product.scrolling.liquid
+++ b/templates/product.scrolling.liquid
@@ -40,7 +40,8 @@
 
 
         
-
+        {% section 'product__reviews' %}
+        {% section 'product__recommendations' %}
       </div>
     </section>
   </div>
